tests/broken/unicode.stderr
error[E0609]: no field `foo` on type `&Unicode`
 --> tests/broken/unicode.rs:4:51
  |
4 | #[oxiplate_inline = "\u{1}\u{12}\u{123}\u{5432}{{ foo }}\u{1}\u{12}\u{123}\u{5432}"]
  |                                                   ^^^ unknown field
